[gd_scene load_steps=4 format=3 uid="uid://bfcpk8bcmt3qm"]

[ext_resource type="Script" uid="uid://xak18se8p46v" path="res://src/menues/test.gd" id="1_md24i"]
[ext_resource type="Texture2D" uid="uid://d2yef70a7018q" path="res://icon.svg" id="2_a1jsh"]

[sub_resource type="LabelSettings" id="LabelSettings_i6pmg"]
font_size = 20

[node name="test" type="SubViewportContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
script = ExtResource("1_md24i")
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
handle_input_locally = false
size = Vector2i(540, 960)
render_target_update_mode = 4

[node name="ColorRect" type="ColorRect" parent="SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0.172549, 0.215686, 1)

[node name="VScrollBar" type="ScrollContainer" parent="SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport/VScrollBar"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 50
alignment = 1

[node name="TextureRect" type="TextureRect" parent="SubViewport/VScrollBar/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_a1jsh")
stretch_mode = 4

[node name="Name" type="Label" parent="SubViewport/VScrollBar/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
text = "Name
"
label_settings = SubResource("LabelSettings_i6pmg")
horizontal_alignment = 1

[node name="Role Type" type="Label" parent="SubViewport/VScrollBar/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
text = "Type"
horizontal_alignment = 1

[node name="QuickSummary" type="Label" parent="SubViewport/VScrollBar/VBoxContainer"]
custom_minimum_size = Vector2(500, 30)
layout_mode = 2
size_flags_horizontal = 5
text = "Quick summary:"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Summary" type="Label" parent="SubViewport/VScrollBar/VBoxContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
size_flags_horizontal = 5
text = "Summary:
"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HowToRun" type="Label" parent="SubViewport/VScrollBar/VBoxContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 1
text = "How To run:"
horizontal_alignment = 1
autowrap_mode = 3
